--- a/macOS/com.googlecode.iterm2.plist
+++ b/macOS/com.googlecode.iterm2.plist
@@ -5459,13 +5459,13 @@
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>530 476 620 392 0 0 1680 1027 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
-	<string>1218 1960 609 401 -438 1050 2560 1417 </string>
+	<string>910 536 606 469 0 0 1680 1027 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>-39 1616 796 486 -438 1050 2560 1417 </string>
+	<string>399 541 796 486 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 375 730 502 0 0 1680 1027 </string>
+	<string>0 0 1680 1027 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>0 0 1680 1027 0 0 1680 1050 </string>
+	<string>0 23 1680 1004 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
 	<string>0 0 1680 1027 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 3</key>
@@ -5494,157 +5494,157 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19370138645172119</real>
+				<real>0.12941177189350128</real>
 				<key>Green Component</key>
-				<real>0.15575926005840302</real>
+				<real>0.12941177189350128</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.12941177189350128</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14145714044570923</real>
+				<real>0.12038997560739517</real>
 				<key>Green Component</key>
-				<real>0.10840655118227005</real>
+				<real>0.078879080712795258</real>
 				<key>Red Component</key>
-				<real>0.81926977634429932</real>
+				<real>0.718147873878479</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.51931029558181763</real>
+				<real>0.22740326821804047</real>
 				<key>Green Component</key>
-				<real>0.93699550628662109</real>
+				<real>0.73019099235534668</real>
 				<key>Red Component</key>
-				<real>0.31744870543479919</real>
+				<real>0.47961589694023132</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.1584954559803009</real>
+				<real>0.18199658393859863</real>
 				<key>Green Component</key>
-				<real>0.49430075287818909</real>
+				<real>0.91622048616409302</real>
 				<key>Red Component</key>
-				<real>0.69710838794708252</real>
+				<real>0.99857872724533081</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.78393226861953735</real>
+				<real>0.95445334911346436</real>
 				<key>Green Component</key>
-				<real>0.55553519725799561</real>
+				<real>0.64410710334777832</real>
 				<key>Red Component</key>
-				<real>0.091996639966964722</real>
+				<real>0.32856267690658569</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.55838865041732788</real>
+				<real>0.73656630516052246</real>
 				<key>Green Component</key>
-				<real>0.30289158225059509</real>
+				<real>0.30266252160072327</real>
 				<key>Red Component</key>
-				<real>0.88624399900436401</real>
+				<real>0.66606861352920532</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.62018769979476929</real>
+				<real>0.82006889581680298</real>
 				<key>Green Component</key>
-				<real>0.70167088508605957</real>
+				<real>0.73243516683578491</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.14981316030025482</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.86405980587005615</real>
+				<real>0.84938156604766846</real>
 				<key>Green Component</key>
-				<real>0.95794391632080078</real>
+				<real>0.84936714172363281</real>
 				<key>Red Component</key>
-				<real>0.98943418264389038</real>
+				<real>0.8493925929069519</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.42409399151802063</real>
+				<real>0.13958784937858582</real>
 				<key>Green Component</key>
-				<real>0.7455558180809021</real>
+				<real>0.4825465977191925</real>
 				<key>Red Component</key>
-				<real>0.42339208722114563</real>
+				<real>0.27130207419395447</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.023484811186790466</real>
+				<real>0.11582206189632416</real>
 				<key>Green Component</key>
-				<real>0.46751424670219421</real>
+				<real>0.59536725282669067</real>
 				<key>Red Component</key>
-				<real>0.64746475219726562</real>
+				<real>0.96285504102706909</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.78231418132781982</real>
+				<real>0.69954341650009155</real>
 				<key>Green Component</key>
-				<real>0.46265947818756104</real>
+				<real>0.3064875602722168</real>
 				<key>Red Component</key>
-				<real>0.12754884362220764</real>
+				<real>0.07626015692949295</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.43516635894775391</real>
+				<real>0.53314954042434692</real>
 				<key>Green Component</key>
-				<real>0.10802463442087173</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.77738940715789795</real>
+				<real>0.33559250831604004</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.52502274513244629</real>
+				<real>0.48725795745849609</real>
 				<key>Green Component</key>
-				<real>0.57082360982894897</real>
+				<real>0.44183778762817383</real>
 				<key>Red Component</key>
-				<real>0.14679534733295441</real>
+				<real>0.056145597249269485</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.79781103134155273</real>
+				<real>0.93608629703521729</real>
 				<key>Green Component</key>
-				<real>0.89001238346099854</real>
+				<real>0.93607044219970703</real>
 				<key>Red Component</key>
-				<real>0.91611063480377197</real>
+				<real>0.93609845638275146</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.53505516052246094</real>
+				<real>0.25882354378700256</real>
 				<key>Green Component</key>
-				<real>0.39142724871635437</real>
+				<real>0.25882354378700256</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.25882354378700256</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.23225757479667664</real>
+				<real>0.24844314157962799</real>
 				<key>Green Component</key>
-				<real>0.084504462778568268</real>
+				<real>0.23034398257732391</real>
 				<key>Red Component</key>
-				<real>0.95941102504730225</real>
+				<real>0.90986210107803345</real>
 			</dict>
 			<key>BM Growl</key>
 			<true/>
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.15170273184776306</real>
+				<real>0.13233847916126251</real>
 				<key>Green Component</key>
-				<real>0.11783610284328461</real>
+				<real>0.13542565703392029</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.13533444702625275</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -5657,9 +5657,9 @@
 				<key>Blue Component</key>
 				<real>0.0</real>
 				<key>Color Space</key>
-				<string>Calibrated</string>
+				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.1491314172744751</real>
 				<key>Red Component</key>
 				<real>1</real>
 			</dict>
@@ -5671,12 +5671,16 @@
 			<real>30</real>
 			<key>Bold Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.82687115669250488</real>
+				<real>0.0</real>
+				<key>Color Space</key>
+				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.83450067043304443</real>
+				<real>0.503448486328125</real>
 				<key>Red Component</key>
-				<real>0.70913255214691162</real>
+				<real>1</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -5691,11 +5695,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.79186719655990601</real>
 				<key>Green Component</key>
-				<real>0.29334646463394165</real>
+				<real>0.6861264705657959</real>
 				<key>Red Component</key>
-				<real>0.95475113391876221</real>
+				<real>0.086931481957435608</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -5704,20 +5708,20 @@
 				<key>Blue Component</key>
 				<real>1</real>
 				<key>Color Space</key>
-				<string>Calibrated</string>
+				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.91000000000000003</real>
+				<real>0.9268307089805603</real>
 				<key>Red Component</key>
-				<real>0.65000000000000002</real>
+				<real>0.70213186740875244</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19370138645172119</real>
+				<real>0.87325412034988403</real>
 				<key>Green Component</key>
-				<real>0.15575926005840302</real>
+				<real>0.87323933839797974</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.87326544523239136</real>
 			</dict>
 			<key>Custom Command</key>
 			<string>No</string>
@@ -5734,11 +5738,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.7630731463432312</real>
+				<real>0.89729100465774536</real>
 				<key>Green Component</key>
-				<real>0.75921261310577393</real>
+				<real>0.89727580547332764</real>
 				<key>Red Component</key>
-				<real>0.61000990867614746</real>
+				<real>0.89730262756347656</real>
 			</dict>
 			<key>Guid</key>
 			<string>4E68B864-BB35-4BEA-B74D-EFB176A87E98</string>
@@ -6041,13 +6045,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.67800000000000005</real>
+				<real>0.73423302173614502</real>
 				<key>Color Space</key>
-				<string>Calibrated</string>
+				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.27000000000000002</real>
+				<real>0.35916060209274292</real>
 				<key>Red Component</key>
-				<real>0.023</real>
+				<real>0.0</real>
 			</dict>
 			<key>Minimum Contrast</key>
 			<real>0.0</real>
@@ -6076,20 +6080,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.55732053518295288</real>
+				<real>0.23922896385192871</real>
 				<key>Green Component</key>
-				<real>0.56244754791259766</real>
+				<real>0.23922491073608398</real>
 				<key>Red Component</key>
-				<real>0.47797361016273499</real>
+				<real>0.23923206329345703</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.28167051076889038</real>
+				<real>0.87325412034988403</real>
 				<key>Green Component</key>
-				<real>0.21576285362243652</real>
+				<real>0.87323933839797974</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.87326544523239136</real>
 			</dict>
 			<key>Send Code When Idle</key>
 			<false/>
@@ -6101,19 +6105,6 @@
 			<false/>
 			<key>Sync Title</key>
 			<false/>
-			<key>Tab Color</key>
-			<dict>
-				<key>Alpha Component</key>
-				<real>1</real>
-				<key>Blue Component</key>
-				<real>0.029825326055288315</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
-				<key>Green Component</key>
-				<real>0.2807241678237915</real>
-				<key>Red Component</key>
-				<real>0.98771727085113525</real>
-			</dict>
 			<key>Tags</key>
 			<array/>
 			<key>Terminal Type</key>
@@ -8848,7 +8839,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2019-02-25T18:22:50Z</date>
+	<date>2019-04-11T19:00:14Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SavePasteHistory</key>
@@ -8880,7 +8871,7 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.2.7</string>
+	<string>3.2.8</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
 	<integer>0</integer>
 	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
