Update brew file and add brew install / updater script.

--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -2,7 +2,7 @@ cask_args appdir: "/Applications"
 
 tap "homebrew/cask"
 tap "caskroom/versions"
-tap "caskroom/fonts"
+tap "homebrew/cask-fonts"
 
 brew "autoconf"
 brew "automake"
@@ -33,7 +33,7 @@ cask "iterm2"
 cask "mactex"
 cask "mendeley"
 cask "odrive"
-cask "onyx"
+# cask "onyx"
 cask "pdf-expert"
 cask "plain-clip"
 cask "skype"
