Add fonts and shell completion to brew file.

--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -11,6 +11,7 @@ brew "cmake"
 brew "curl"
 brew "docker"
 brew "git"
+brew "git-flow"
 brew "lsusb"
 brew "mas"
 brew "openssl"
@@ -20,6 +21,11 @@ brew "rsync"
 brew "shellcheck"
 brew "ssh-copy-id"
 brew "wget"
+brew "vim"
+brew 'bash-completion'
+brew "brew-cask-completion"
+brew "zsh-completions"
+brew "zsh-completions"
 
 cask "adobe-creative-cloud"
 cask "appcleaner"
@@ -46,9 +52,11 @@ cask "xquartz"
 cask "font-monoid"
 cask "font-source-code-pro"
 cask "font-source-code-pro-for-powerline"
+cask "font-sourcecodepro-nerd-font"
 cask "font-open-sans"
 cask "font-inconsolata"
 cask "font-inconsolata-for-powerline"
+cask "font-hack-nerd-font"
 
 mas "Fantastical 2", id: 975937182
 mas "Memory Clean 2", id: 1114591412
