Update brewfile: slack, zoom, mendeley. Remove flux, github, chrome.

--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -1,7 +1,7 @@
 cask_args appdir: "/Applications"
 
 tap "homebrew/cask"
-tap "caskroom/versions"
+tap "homebrew/cask-versions"
 tap "homebrew/cask-fonts"
 
 brew "autoconf"
@@ -32,12 +32,12 @@ cask "appcleaner"
 cask "atom"
 cask "cyberduck"
 cask "firefox"
-cask "flux"
-cask "github"
-cask "google-chrome"
+# cask "flux"
+# cask "github"
+# cask "google-chrome"
 cask "iterm2"
 cask "mactex"
-cask "mendeley"
+cask "mendeley-reference-manager"
 cask "odrive"
 # cask "onyx"
 cask "pdf-expert"
@@ -48,6 +48,8 @@ cask "sublime-text"
 cask "visual-studio-code"
 cask "vlc"
 cask "xquartz"
+cask "slack"
+cask "zoomus"
 
 cask "font-monoid"
 cask "font-source-code-pro"
