--- a/macOS/com.googlecode.iterm2.plist
+++ b/macOS/com.googlecode.iterm2.plist
@@ -5480,19 +5480,19 @@
 	<key>NSWindow Frame SharedPreferences</key>
 	<string>984 726 796 486 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>90 0 1234 1417 0 0 2560 1417 </string>
+	<string>-1714 0 1714 1417 -3440 0 3440 1417 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>0 0 1242 1417 0 0 2560 1417 </string>
+	<string>-1714 0 1714 1417 -3440 0 3440 1417 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
-	<string>-3440 0 1714 1417 -3440 0 3440 1417 </string>
+	<string>0 346 1170 1071 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 3</key>
-	<string>1286 0 1274 1417 0 0 2560 1417 </string>
+	<string>-1714 0 1714 1417 -3440 0 3440 1417 </string>
 	<key>NSWindow Frame iTerm Window 4</key>
 	<string>2560 0 1274 1417 2560 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 5</key>
-	<string>1451 236 1106 837 0 0 2560 1417 </string>
+	<string>-1714 0 1714 1417 -3440 0 3440 1417 </string>
 	<key>NSWindow Frame iTerm Window 6</key>
-	<string>109 260 730 527 0 0 2560 1417 </string>
+	<string>15 0 2482 1417 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 7</key>
 	<string>-1054 -935 730 527 -1440 -1120 1440 2560 </string>
 	<key>New Bookmarks</key>
@@ -5759,7 +5759,7 @@
 			<key>Disable Window Resizing</key>
 			<true/>
 			<key>Flashing Bell</key>
-			<false/>
+			<true/>
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
@@ -6125,7 +6125,7 @@
 			<key>Shortcut</key>
 			<string></string>
 			<key>Silence Bell</key>
-			<false/>
+			<true/>
 			<key>Smart Cursor Color</key>
 			<false/>
 			<key>Sync Title</key>
@@ -8831,7 +8831,7 @@
 		<key>screenFrame</key>
 		<string>{{0, 0}, {2560, 1440}}</string>
 		<key>topLeft</key>
-		<string>{127, 1067}</string>
+		<string>{125, 1068}</string>
 	</dict>
 	<key>NoSyncHaveRequestedFullDiskAccess</key>
 	<true/>
@@ -8842,7 +8842,7 @@
 	<key>NoSyncLastTipTime</key>
 	<real>562114860.75658298</real>
 	<key>NoSyncLaunchExperienceControllerRunCount</key>
-	<integer>25</integer>
+	<integer>27</integer>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
 	<true/>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
@@ -9674,7 +9674,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2020-04-08T01:04:11Z</date>
+	<date>2020-04-20T01:05:20Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SUUpdateGroupIdentifier</key>
