--- a/OS/macOS/scripts/Brewfile
+++ b/OS/macOS/scripts/Brewfile
@@ -17,6 +17,7 @@ brew "mas"
 brew "openssl"
 brew "pandoc"
 brew "psgrep"
+brew "rclone"
 brew "rsync"
 brew "shellcheck"
 brew "ssh-copy-id"
@@ -63,7 +64,7 @@ cask "font-hack-nerd-font"
 mas "Fantastical 2", id: 975937182
 mas "Memory Clean 2", id: 1114591412
 mas "Window Focus", id: 1142625137
-# mas "Slack", id: 803453959
+mas "Slack", id: 803453959
 mas "LastPass", id: 926036361
 # mas "Microsoft Remote Desktop", id: 715768417
 mas "Moom", id: 419330170
