Clean some legacy fields in brew file

--- a/OS/macOS/scripts/Brewfile
+++ b/OS/macOS/scripts/Brewfile
@@ -37,19 +37,19 @@ cask "firefox"
 # cask "github"
 # cask "google-chrome"
 cask "iterm2"
-cask "mactex"
+# cask "mactex"
 cask "mendeley-reference-manager"
 cask "odrive"
 # cask "onyx"
 # cask "pdf-expert"
 cask "plain-clip"
-cask "skype"
+# cask "skype"
 cask "spotify"
 # cask "sublime-text"
 cask "visual-studio-code"
 cask "vlc"
 cask "xquartz"
-cask "slack"
+# cask "slack"
 cask "zoomus"
 
 cask "font-monoid"
