Brew cask google chrome and update zoom name

--- a/OS/macOS/assets/Brewfile
+++ b/OS/macOS/assets/Brewfile
@@ -37,7 +37,7 @@ cask "appcleaner"
 cask "firefox"
 # cask "flux"
 # cask "github"
-# cask "google-chrome"
+cask "google-chrome"
 cask "iterm2"
 # cask "mactex"
 cask "mendeley-reference-manager"
@@ -52,7 +52,7 @@ cask "visual-studio-code"
 cask "vlc"
 cask "xquartz"
 # cask "slack"
-cask "zoomus"
+cask "zoom"
 
 cask "font-monoid"
 cask "font-source-code-pro"
