--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -49,7 +49,7 @@ cask "visual-studio-code"
 cask "vlc"
 cask "xquartz"
 cask "slack"
-cask "zoomus"
+cask "zoom"
 
 cask "font-monoid"
 cask "font-source-code-pro"
