--- a/OS/macOS/assets/Brewfile
+++ b/OS/macOS/assets/Brewfile
@@ -67,10 +67,10 @@ cask "font-fontawesome"
 mas "Bear", id: 1091189122
 mas "EasyRes", id: 688211836
 mas "Fantastical 2", id: 975937182
-mas "Memory Clean 2", id: 1114591412
-mas "Window Focus", id: 1142625137
+# mas "Memory Clean 2", id: 1114591412
+# mas "Window Focus", id: 1142625137
 mas "Slack", id: 803453959
 mas "LastPass", id: 926036361
 # mas "Microsoft Remote Desktop", id: 715768417
-mas "Moom", id: 419330170
-mas "MPlayerX", id: 421131143
+# mas "Moom", id: 419330170
+# mas "MPlayerX", id: 421131143
