Add clickup cask

--- a/OS/macOS/assets/Brewfile
+++ b/OS/macOS/assets/Brewfile
@@ -35,6 +35,7 @@ cask "slack"
 cask "adobe-creative-cloud"
 cask "appcleaner"
 # cask "atom"
+cask "clickup"
 # cask "cyberduck"
 cask "firefox"
 # cask "flux"
