--- a/OS/macOS/assets/Brewfile
+++ b/OS/macOS/assets/Brewfile
@@ -35,17 +35,17 @@ cask "slack"
 cask "adobe-creative-cloud"
 cask "appcleaner"
 # cask "atom"
-cask "clickup"
+# cask "clickup"
 # cask "cyberduck"
-cask "firefox"
+# cask "firefox"
 # cask "flux"
 # cask "github"
 cask "google-chrome"
 cask "iterm2"
-cask "lastpass"
+# cask "lastpass"
 # cask "mactex"
-cask "mendeley-reference-manager"
-cask "odrive"
+# cask "mendeley-reference-manager"
+# cask "odrive"
 # cask "onyx"
 # cask "pdf-expert"
 cask "plain-clip"
