--- a/OS/macOS/assets/com.googlecode.iterm2.plist
+++ b/OS/macOS/assets/com.googlecode.iterm2.plist
@@ -7324,7 +7324,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>SauceCodeProNerdFontCompleteM-Regular 14</string>
+			<string>SauceCodeProNFM 11</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
