--- a/OS/macOS/assets/Brewfile
+++ b/OS/macOS/assets/Brewfile
@@ -31,7 +31,7 @@ brew "zsh-completions"
 brew "zsh-completions"
 
 cask "1password"
-cask "slack"
+# cask "slack"
 cask "adobe-creative-cloud"
 cask "appcleaner"
 # cask "atom"
@@ -49,12 +49,13 @@ cask "iterm2"
 # cask "onyx"
 # cask "pdf-expert"
 cask "plain-clip"
+cask "private-internet-access"
 # cask "skype"
 cask "spotify"
 # cask "sublime-text"
 cask "visual-studio-code"
 cask "vlc"
-cask "xquartz"
+# cask "xquartz"
 cask "slack"
 cask "zoom"
 
